--- a/Menu.html
+++ b/Menu.html
@@ -18,10 +18,14 @@
             </a>
         <br>
         <strong>&rharu;</strong> 
-            <a href="https://danielatllas.github.io/Analytics/Hadoop.html">
-                Apache Hadoop
+            <a href="https://danielatllas.github.io/Analytics/HadoopIntroducao.html">
+                Apache Hadoop - Introdução
             </a>
         <br>
-
+         <strong>&rharu;</strong> 
+            <a href="https://danielatllas.github.io/Analytics/Spark.html">
+                Apache Spark
+            </a>
+        <br>
     </body>
 </html>
