--- a/Menu.html
+++ b/Menu.html
@@ -33,6 +33,15 @@
                     Apache Spark - Introdução
                 </a>
             <br>
+            <br>
+            <li><strong>Netezza</strong></li>
+            <br>
+                <strong>&rharu;</strong> 
+                    <a href="https://danielatllas.github.io/Analytics/NetezzaIntroducao.html">
+                        Netezza - Introdução
+                    </a>
+                <br>
+            <br>
         </ul>
     </body>
 </html>
