--- a/Introducao.html
+++ b/Introducao.html
@@ -45,5 +45,52 @@
                 </ul>
                 <p>Diante disso, é possível estimar exemplos de como o Big Data pode ser usado junta as análises, estatísticas e estratégias, como por exemplo <strong>processar de forma eficiente e barata, um grande volume de dados</strong>, transformar 12Tb de tweets gerados cada dia em produtos de análise popular, <strong>responder ao aumento da velocidade de geração de dados</strong>, investigar 5 milhões de trades nas bolsas de valores afim de identificar fraudes, <strong>coletar e analisar dados de diferentes formatos e fontes</strong> e monitorar milhares de videos de segurança afim de identificar pontos perigosos em uma cidade. Ou seja, através do Big Data e o Analytics, é possível estimar/estipular prevenções que podem ser críticasa em um determinado ambiente, através da coleta de grandes volumes de dados.</p>
         </ul>
+        <hr>
+        <h2>BI - Business Intelligence</h2>
+        <p>Devido a grande competitividade e à exigência do mercado em empresas mais preparadas para disputarem entre si, o BI é uma forma inteligente de otimizar falhas e manter o negócio em destaque. o BI é uma sigla derivada da palavra Bussines Intelligence (Inteligência de Negócios), o qual abranje todos os setores empresariais, desde o financeiro, operacional, comercial e o de marketing. Basicamente, é um conjunto de teorias, metodologia, preocessos, tecnologias e estruturas que transformam grandes quantidades de dados, que irão ofrnecer informações essenciais para uma boa gestão e tomadas de decisões, assim como medidas de estratégias e prevenções.</p>
+        <p>Ou seja, é um conjunto de técnicas e de ferramentas que visam oferecer <strong>suporte a tomada de decisões</strong> e ao monitoramento de resultados dos investimentos da empresa. Diante disso, o BI surge como uma forma de agrupar e explorar informações para descobrir vantagens para um determinado negócio, tendo como objetivo principal o auxilio na interpretação e análise dos dados, para ssim identificar oportunidades ou riscos.</p>
+        <p>3 características de uma empresa irão fornecer os dados necessários para uma atuação do BI, onde é analisado e estudado o <strong>negócio, a gestão e a tecnologia</strong> do ambiente.</p>
+        <p>Dessa forma, o BI auxilia a organização a estruturar um planejamento estratégico para construir vantagens competitivas que agreguem o <strong>valor ao negócio e às soluções oferecidas aos clientes</strong>. Logo, as vantagens de empregar ferramentas de BI são inúmeras, dando mais velocidades à tomada de decisões  com mais qualidade, otimizando processos e etc.</p>
+        <p>As ferramentas do BI auxiliam na identificação de tendências de consumo e mudanças no comportamento do seu público alvo. Com isso, auxiliam na detecção de oportunidades de negócios, desenvolvimento e até lançamentos de novos produtos (ou atualizações), consequentemente impactando também, no aumento da lucratividade. Além de informações como:</p>
+        <ul>
+            <li>Curvas de consumo</li>
+            <li>Clientes que mais compraram</li>
+            <li>Produtos com maior rentabilidade</li>
+            <li>Conhecimento do ambiente/negócio</li>
+            <li>Melhoramento e aperfeiçoamento na tomada de decisões (baseando-as em evidências)</li>
+            <li>Análise em tempo real do amdamento empresarial e identificação de perdas, acessos e fraudes.</li>
+        </ul>
+        <p>Diante disso, para um facilitamento das funcionalidades do BI, alguns pilares são a sua essência: <strong>armazenamento e extração dos dados</strong> (coleta das informações em tempo real, dados streaming), <strong>recursos de relatório e consulta e análise dos dados</strong> (aproveitamento dos dados coletados, de forma a gerar previsões, tomadas de deciões e etc), <strong>painéis digitais interativos e visualização de dados e processos</strong> (Em modo geral, a entrega dos gráficos e análises para que uma decisão final seja tomada).</p>
+        <ul>
+            <li><strong>Coleta de dados</strong> - No primeiro momento, todas as informações e dados da empresa são coletados e analisados, onde determinadas características como produtividade e oportunidades são determinadas.</li>
+            <br>
+            <li><strong>Organização e análise</strong> - Os dados e informações recolhidos e analisados são organizados em databases. Para facilitar a visualização dos gestores, pode-se apresentá0los visualemente, com o auxílio de ferramentas e plataformas, como o Power BI e Grafana.</li>
+            <br>
+            <li><strong>Ação e monitoramente</strong> - Os responsáveis tomam decisões baseadas nas informações analisadas e monitoram seus resultados.</li>
+        </ul>
+        <h4>Aplicação do BI em empresas</h4>
+            <p>Há 3 pontos básicos para a criação de uma estratégias de Business Intelligence dentro do ambiente corporativo:</p>
+            <ol>
+                <li>Dados confiáveis e de qualidade</li>
+                    <p>Para que uma estratégia seja formada, é necessário estar atento a qualidade das informações coletadas no processo, de forma que elas precisam ser de fácil compreenção e acessibilidade, estando relacionado então a forma e o local em que esses dados serão armazenados.</p>
+                    <p>É aconselhável que regras de acesso para a segurança do negócio sejam estabelecidas, consequentemente indicando o investimento em uma governança de dados de qualidade.</p>
+                    <br>
+                <li>Visão clara dos objetivos</li>
+                    <p>Os analistas responsáveis pela estratégia de BI devem sempre ter uma visão clara dos objetivos para que a análise seja bem executada, assim como saber quais são as metas do negócio, os pontos fortes e fracos e suas necessidades.</p>
+                    <p>Assim, será possível coletar dados de fornecedores, como internet, emails, bancos de dados e outras fontes, muitas vezes de livre acesso.</p>
+                    <br>
+                <li>Mudança de acordo com a meta do negócio</li>
+                    <p>Saber como aplicar o BU corretamente no planejamento, concede à empresa a competitividade necessária para gerenciar negócios sustentáveis em longo prazo. Portanto, é fundamental detectar a origem dos problemas e identificar como otimizar a rotina de trabalho executada e por meio dessa análise de atividades e informações internas que o processo de tomada de decisão se torna mais eficiente.</p>
+            </ol>
+        <hr>
+        <h4>Business Intelligence X Big Data</h4>
+            <p>Os dois conceitos fazem parte de transformações digitais que estão revolucionando a forma das empresas se desenvolverem. Onde mesmo com suas diferenças, é possível unir ambos os conceitos e funcionalidade com o objetivo de alcançar novos resultados, ou seja, o seu trabalho em conjunto é algo a ser levado em consideração. Porém, caso a dúvida do que cada um provê permaneça, seguem as dfierenças:</p>
+            <ul>
+                <li><strong>Big Data</strong></li>
+                    <p>O Big Data tem como <i>core</i> o <strong>acúmulo dos dados</strong>, onde se viu a necessidade relacionada a inovações digitais e enormes quantidades de dados que a tecnologia fornece. De forma que essas grandes massas de dados são analisadas por especialistas de <i>Data Science</i>, onde procuram achar correlações entre esses dados, visando trazer diversos benefícios para as organizações.</p>
+                <li>BI</li>
+                    <p>O <i>Business Intelligence</i> suge como o "próximo passo do Big Data", utilizando-se dos dados e ajudando a compreender a base de dados do negócio, orientado os envolvidos a tomadas de decisões e estratégias. Dessa forma, o BI estrutura as informações, as refina, avaliam e as orientam estrategicamente para aumentar a competitividade.</p>
+            </ul>
+        <p>Ou seja, é ideal utilizar os dois conceitos para enteder de forma mais profunda e clara como os dados podem atrapalhar ou ajudar um ambiente.</p>
     </body>
 </html>
