--- a/Menu.html
+++ b/Menu.html
@@ -19,7 +19,6 @@
         <br>
         <ul>
             <li><strong>Apache Hadoop</strong></li>
-            <br>
                 <strong>&rharu;</strong> 
                     <a href="https://danielatllas.github.io/Analytics/HadoopIntroducao.html">
                         Apache Hadoop - Introdução
@@ -27,7 +26,6 @@
                 <br>
             <br>
             <li><strong>Apache Spark</strong></li>
-            <br>
              <strong>&rharu;</strong> 
                 <a href="https://danielatllas.github.io/Analytics/SparkIntroducao.html">
                     Apache Spark - Introdução
@@ -35,13 +33,17 @@
             <br>
             <br>
             <li><strong>Netezza</strong></li>
+            <strong>&rharu;</strong> 
+                <a href="https://danielatllas.github.io/Analytics/NetezzaIntroducao.html">
+                    Netezza - Introdução
+                </a>
             <br>
-                <strong>&rharu;</strong> 
-                    <a href="https://danielatllas.github.io/Analytics/NetezzaIntroducao.html">
-                        Netezza - Introdução
-                    </a>
-                <br>
             <br>
+            <li><strong>Cognos</strong></li>
+            <strong>&rharu;</strong> 
+                <a href="https://danielatllas.github.io/Analytics/CognosIntroducao.html">
+                    Cognos - Introdução
+                </a>
         </ul>
     </body>
 </html>
