--- a/CognosIntroducao.html
+++ b/CognosIntroducao.html
@@ -27,5 +27,9 @@
         <p>Ao arrastar um campo para o painel de dashboard, automaticamente a plataforma definirá um tipo de gráfico para aquele determinado dado, porém, também é possível alterar o formato em que esse gráfico será visível, basntando selecionar a opção <strong>selecionar visualização</strong> (além disso, a plataforma exibe os tipos de gráficos possíveis para a exibição de determinados dados. O nome de um usuário por exemplo, não é cabível em um gráfico numérico).</p>
         <p>Outro aspect a ser levado em consideração, é a possibilidade de alteração das <strong>propriedades</strong> do dashboard a ser exibido, como cores do painél/gráficos/dados, formatos, exibições de alguns dados ou nome da coluna, basicamente, é possível alterar todo o corpo daquilo que será visualizado.</p>
         <img src="https://danielatllas.github.io/Analytics-BI/04.png">
+        <p>Para mais informações, viste o link abaixo de <i>developer IBM</i> para uma orientação mais aprofundado na criação de dashboards pelo <i>IBM Cognos</i>:</p>
+        <a href="https://developer.ibm.com/industries/retail/tutorials/create-interactive-dashboards-on-watson-studio">
+                developer.ibm.com/create-dashboards
+            </a>
     </body>
 </html>
