--- a/Menu.html
+++ b/Menu.html
@@ -49,6 +49,11 @@
                 <a href="https://danielatllas.github.io/Analytics/CognosIntroducao.html">
                     Cognos - Introdução
                 </a>
+            <br>
+               <strong>&rharu;</strong> 
+                <a href="https://danielatllas.github.io/Analytics/CognosInstalacao.html">
+                    Cognos - Instalação
+                </a> 
         </ul>
     </body>
 </html>
