--- a/Menu.html
+++ b/Menu.html
@@ -54,6 +54,12 @@
                 <a href="https://danielatllas.github.io/Analytics/CognosInstalacao.html">
                     Cognos - Instalação
                 </a> 
+            <br>
         </ul>
+        <strong>&rharu;</strong> 
+            <a href="https://danielatllas.github.io/Analytics/JVM.html">
+                 JVM
+            </a> 
+            <br>
     </body>
 </html>
