--- a/Menu.html
+++ b/Menu.html
@@ -13,51 +13,51 @@
         <p> Escolha uma das opções abaixo: </p>
         
         <strong>&rharu;</strong> 
-            <a href="https://danielatllas.github.io/Analytics/Introducao.html">
+            <a href="https://danielatllas.github.io/Analytics-BI/Introducao.html">
                 Introdução
             </a>
         <br>
         <strong>&rharu;</strong> 
-            <a href="https://danielatllas.github.io/TecnologiasArmazenamento/DW.html">
+            <a href="https://danielatllas.github.io/Analytics-BI/TecnologiasArmazenamento.html">
                 Tecnologias de armazenamento
             </a>
         <br>
         <ul>
             <li><strong>Apache Hadoop</strong></li>
                 <strong>&rharu;</strong> 
-                    <a href="https://danielatllas.github.io/Analytics/HadoopIntroducao.html">
+                    <a href="https://danielatllas.github.io/Analytics-BI/HadoopIntroducao.html">
                         Apache Hadoop - Introdução
                     </a>
                 <br>
             <br>
             <li><strong>Apache Spark</strong></li>
              <strong>&rharu;</strong> 
-                <a href="https://danielatllas.github.io/Analytics/SparkIntroducao.html">
+                <a href="https://danielatllas.github.io/Analytics-BI/SparkIntroducao.html">
                     Apache Spark - Introdução
                 </a>
             <br>
             <br>
             <li><strong>Netezza</strong></li>
             <strong>&rharu;</strong> 
-                <a href="https://danielatllas.github.io/Analytics/NetezzaIntroducao.html">
+                <a href="https://danielatllas.github.io/Analytics-BI/NetezzaIntroducao.html">
                     Netezza - Introdução
                 </a>
             <br>
             <br>
             <li><strong>Cognos</strong></li>
             <strong>&rharu;</strong> 
-                <a href="https://danielatllas.github.io/Analytics/CognosIntroducao.html">
+                <a href="https://danielatllas.github.io/Analytics-BI/CognosIntroducao.html">
                     Cognos - Introdução
                 </a>
             <br>
                <strong>&rharu;</strong> 
-                <a href="https://danielatllas.github.io/Analytics/CognosInstalacao.html">
+                <a href="https://danielatllas.github.io/Analytics-BI/CognosInstalacao.html">
                     Cognos - Instalação
                 </a> 
             <br>
         </ul>
         <strong>&rharu;</strong> 
-            <a href="https://danielatllas.github.io/Analytics/JVM.html">
+            <a href="https://danielatllas.github.io/Analytics-BI/JVM.html">
                  JVM
             </a> 
             <br>
