--- a/Menu.html
+++ b/Menu.html
@@ -43,6 +43,11 @@
                     Netezza - Introdução
                 </a>
             <br>
+            <strong>&rharu;</strong> 
+                <a href="https://danielatllas.github.io/Analytics-BI/NetezzaADM.html">
+                    Netezza - Administração
+                </a>
+            <br>
             <br>
             <li><strong>Cognos</strong></li>
             <strong>&rharu;</strong> 
@@ -59,6 +64,11 @@
         <strong>&rharu;</strong> 
             <a href="https://danielatllas.github.io/Analytics-BI/JVM.html">
                  JVM
+            </a> 
+            <br>
+        <strong>&rharu;</strong> 
+            <a href="https://danielatllas.github.io/Analytics-BI/Servidores.html">
+                 Servidores de aplicação e web
             </a> 
             <br>
     </body>
