--- a/Menu.html
+++ b/Menu.html
@@ -48,6 +48,16 @@
                     Netezza - Administração
                 </a>
             <br>
+            <strong>&rharu;</strong> 
+                <a href="https://danielatllas.github.io/Analytics-BI/NetezzaAcessos.html">
+                    Netezza - Controle e Segurança de Acessos
+                </a>
+            <br>
+            <strong>&rharu;</strong> 
+                <a href="https://danielatllas.github.io/Analytics-BI/NetezzaGroom.html">
+                    Netezza - Groom Command
+                </a>
+            <br>
             <br>
             <li><strong>Cognos</strong></li>
             <strong>&rharu;</strong> 
