--- a/Menu.html
+++ b/Menu.html
@@ -54,6 +54,11 @@
                 </a>
             <br>
             <strong>&rharu;</strong> 
+                <a href="https://danielatllas.github.io/Analytics-BI/NetezzaWLM.html">
+                    Netezza - Workload Management
+                </a>
+            <br>
+            <strong>&rharu;</strong> 
                 <a href="https://danielatllas.github.io/Analytics-BI/NetezzaGroom.html">
                     Netezza - Groom Command
                 </a>
