--- a/HadoopIntroducao.html
+++ b/HadoopIntroducao.html
@@ -3,12 +3,12 @@
 <html lang="pt-br">
     <head>
         <meta charset="utf-8">
-        <title>Hadoop - Introdução - Analytics</title>
+        <title>Hadoop - Introdução</title>
         <meta name="description" content="Este é um site referênte à estudos sobre Analytics">
     </head>
     
     <body>
-        <h1>Apache Hadoop - Introdução - Analytics</h1>
+        <h1>Apache Hadoop - Introdução </h1>
         <p>O apache hadoop é um freamework de armazenamento e processamento de Big Data, sendo um software oper sorce para esses grandes conjuntos de dados em clusters (conjuntos de máquinas respondendo como 1 só) de hardware de baixo custo, além de ser um sistema de armazenamento compartilhado, distribuído e de alta confiabilidade. Perceba que o cluster é essêncial para estes conceitos, uma vez que essa massa enorme de dados não é cabível em apenas uma máquina para o processamento e armazenamento dos mesmos, necessitando então da utilização de clusters. Dessa forma, o Hadoop se inicia para trabalhar este processo do Big Data em clusters.</p>
         <p>Ou seja, o Apache Hadoop facilita o funcionamento de diversos computadores, com o bjetivo de analisar grandes volumes de dados, através de um conjunto de softwares que trabalham estes conceitos. Estes softwares se juntam como um framework para formar o Hadoop. Sendo composto por 3 módulos, sendo eles:</p>
         <ul>
@@ -22,54 +22,6 @@
         </ul>
         <p>Dessa forma, o Hadoop permite executar aplicações em sistemas distribuídos através de diversos computadores, os chamados <strong>nodes</strong>, envolvendo <i>petabytes</i> de dados. O HSFD possui então a função de permitir uma rápida transferência de dados entre esses nodes. Uma das principais características do Apache Hadoop é a confiabilidade e sua <strong>capacidade de se recuperar de falhas automaticamente</strong>.</p>
         <p>Portanto, o Hadoop possui algumas características que o torna tão exigido em projetos de Big data, como <strong>baixo custo, escalável, Tolerante a falhas, flexível e open surce.</strong>, além de uma portabilidade entre hardwares e S.O. heterogêneos e uma confiabilidade através da manutenção de várias cópias de dados. Assim como uma capacidade de processamentode todos os dados de tipo e formato (seja SQL ou NOSQL) e um suporte a diversas linguagens de programação (como Java, C++ e Python).</p>
-        <hr>
-        <h3>Arquitetura Hadoop</h3>
-            <p>É necessário entender que o Hadoop <strong>não é um banco de dados</strong>, mas sim um framework para armazenamento e processamento de grandes conjuntos de dados, possuindo diferenças como:</p>
-            <ul>
-                <li>Modelo de computação</li>
-                    <ol>
-                        <li>Conceito de Jobs</li>
-                        <li>Cada job é uma unidade de trabalho</li>
-                        <li>não há controle de concorrência</li>
-                    </ol>
-                    <br>
-                <li>Modelo de dados</li>
-                    <ol>
-                        <li>Qualquer tipo de dado pode ser usado</li>
-                        <li>Dados em qualquer formato</li>
-                        <li>Modelo de apenas leitura</li>
-                    </ol>
-                    <br>
-                <li>Modelo de custo</li>
-                    <ol>
-                        <li>Máquinas de custo mais baixo podem ser usadas</li>
-                    </ol>
-            </ul>
-            <p>Além de possuir serviços que são trabalhados para a realização do funcionamento do Hadoop, que são feitos pelos Namenodes e Datanodes:</p>
-            <ul>
-                <li><strong>NameNode</strong> - Possui a função de gerenciar o armazenamento distribuído (principal serviço)</li>
-                <br>
-                <li><strong>DataNode</strong> - Serviço responsável pelo armazenamento e redistribuição dos dados</li>
-                <br>
-                <li><strong>JobTracker</strong> - Função de disparar os jobs e ser executado pelos dados, sendo um gestor das execuções</li>
-                <br>
-                <li><strong>TaskTracker</strong> - Quem irá realizar a execução das tarefas</li>
-            </ul>
-            <p>Diante disso, os dados são enviados para o cluster Hadoop, adquirindo os dados independente de onde seja a fonte (seja um Banco SQL ou até mesmo de redes sociais), trabalho esse realizado pelo NameNode e DataNode.</p>
-            <p>Feito isso, é realizado o mapeamento e redução, realizado por um modelo de programa de linguagem de programação, realizados pelo desenvolvedor e processado e trabalhado peloJobTracker e TaskTracker</p>
-            <h4>Modos de configuração do Hadoop</h4>
-                <p>O Apache Hadoop pode ser configurado de 3 formas diferentes, pela sua liberdade e flexibilidade, permitindo ao usuário as configurações:</p>
-                <ol>
-                    <li><strong>StandAlone</strong> - Onde todos os serviços Hadoop são executados em uma única JVM (Java Virtual Machine), no mesmo servidor. Sendo recomendado apenas para ambientes de testes, tendo uma capacidade mais simplória.</li>
-                    <br>
-                    <li><strong>Pseudo Distribuído</strong> - Que são serviços individuais do Hadoop são atribuídos a JVM's individuais, ou seja, cada serviço Hadoop terá sua Virtual Machine, requerindo um grande capacidade de memória, no mesmo servidor.</li>
-                    <br>
-                    <li><strong>Totalmente Distribuído</strong> - Sendo o mais recomendado para ambientes de produção, os seus serviços individuais são executados em JVM's individuais, mas através do cluster.</li>
-                </ol>
-            <h4>Distributed Cache</h4>
-                <p>Ou cache distribuído, é uma funcionalidade do Hadoop que permite cache dos arquivos usados pelas aplicações. Isso permite ganhos consideráveis na performance no acesso aos dados por MapReduce, além de permitir que um node do cluster acessos os arquivos no filesystem local.</p>
-            <h4>Kerberos</h4>
-                <p>Sendo um mecanismo de autenticação de segurança (também usado em sistemas de diretórios Windows e Linux). Por default, o Hadoop se encontra no modo <i>não-seguro</i> não necessitando da autenticação real, podendo ser configurado e executado em modo de segurança, onde cada usuário e serviço precisa ser autenticado pelo Kerberos, a fim de utilizar os serviços do Hadoop.</p>
         <hr>
         
     </body>
