--- a/Menu.html
+++ b/Menu.html
@@ -36,6 +36,11 @@
                         Apache Hadoop - Introdução
                     </a>
                 <br>
+                <strong>&rharu;</strong> 
+                    <a href="https://danielatllas.github.io/Analytics-BI/HadoopArquitetura.html">
+                        Apache Hadoop - Arquitetura
+                    </a>
+                <br>
             <br>
             <li><strong>Apache Spark</strong></li>
              <strong>&rharu;</strong> 
