--- a/BigIntroducao.html
+++ b/BigIntroducao.html
@@ -20,12 +20,12 @@
                 <p>Limpam, exploram e organizam os dados para encontrar padrões escondidos nos dados. Ou seja, esses possuem a função de analisar um grande volume de dados na criação de <i>insights</i>. Além disso, empregam programas analíticos sofisticados, <i>machine learning</i> e métodos estatísticos para responder questões de negócio, como: <i>Machine Learning</i>, <i>Storytelling</i>, criação de <i>insights</i> e modelagem preditiva.</p>
                 <p>Ou seja, estão diretamente ligados a funçã de <strong>analisar/trabalhar os dados</strong> que foram coletados, construindo estartégias, gráficos e previsões a partir desses dados coletados.</p>
         </ul>
-        <img src="https://danielatllas.github.io/Analytics-BI/EngenheirosCientistas.png">
+        <img src="https://danielatllas.github.io/Analytics/EngenheirosCientistas.png">
         <br>
         <p>Diante disso, entenda que o conceito de <i>Big Data</i> é trabalhado nas empresas chamadas de <strong>data-driven interprises</strong> (Empresar Orientadas a Dados), que são ambientes que trabalham com a essência de <strong>análises preditivas</strong> dos dados obtidos, ou seja, trabalha diretamente com a criação de estratégias e previsões sobre os dados que estão sendo coletados, afim de criar uma estratégia que vá atingir objetivos futuros. As demais empresas, que não são consideradas <i>data-driven</i>, são aquelas que maniulam seus dados obtidos e geram relatórios com uma <strong>base ultrapassada</strong>, ou seja, viões gerais do que ocorreu no passado de seu ambiente. Imagine uma empresa que obtém inúmeros dados sobre sí mesma e gera um relatório/dashboard/planilha de quantos produtos foram vendidos no mês anterior, etsa é considerada uma empresa comum que se baseis em seus gastos passados. Agora imagine uma empresa que ao coletar dados desse mês anterior, consegue gerar um relatório/dashboard/planilha com uma previsão do que será estimado para daqui 5 qanos, por exemplo, essa sim é uma <i>data-driven interprise</i>.</p>
         <p>Diante disso, dá pra se entender que para os estudos sobre <i>Big Data</i> e essas previsões sobre os dados coletados, são trabalhados pelo termo <strong>Data Science</strong>, a tão comentada ciência dos dados, a qual possui o principal objetivo de gerar análises e estratégias a parti de dados atuais, com uma visão futuristica das possibilidades. Dessa forma, uma empresa poderia se prevenircom acontecimentos futuros e se tornar mais apta a entender suas demandas. Logo, a <i>data science</i> está diretamente ligada as <i>data-driven interprises</i>.</p>
         <p>Outro termo que será deparado com todo este universo dos dados, é sobre o BI, ou <strong>Business Intelligence</strong>, a qual trabalha diretamente com a geração de relatórios e <i>dashboards</i> a partir dos dados que foram coletados. Porém, esses costumam etsra ligados as corporações comuns, que trabalham com análises de dados ultrapassados, gerando uma abordagem para com o que já aconteceu no mbiente.</p>
-        <img src="https://danielatllas.github.io/Analytics-BI/BiDataScience.png">
+        <img src="https://danielatllas.github.io/Analytics/BiDataScience.png">
         <p>Porém, enteda que esses não precisam estar em abientes opostos e muito menos devam ser trabalhados de maneira separada, uma vez que ao se juntar os dois ambientes de <i>data science</i> e <i>business intelligence</i>, uma corporativa se torna muito mais forte e capacitada na administração de seus dados, onde o <i>data science</i> poderá auxiliar nas análises de dados ultrapassados, assim como o BI pode auxiliar nos relatórios preditivos dos dados futuros. Diante dessa concatenagem dos dois termos, são exigidas ações, como:</p>
         <ul>
             <li>Coletar dados reais e verdadeiros, os quais devem ser dignos de confiança</li>
@@ -92,8 +92,8 @@
                 <li><strong>Dark Data</strong></li>
                     <p>Os chamados <i>Dark Data</i> são os considerados <strong>dados "inúteis"</strong>, que continuam armazenados no ambiente, onde muitos desses dados <strong>não são acessados</strong>, <strong>não são manipulados</strong> ou até mesmo <strong>não são de conhecimento do propietário</strong>. Dados esses que ocupam um armazenmaneto inútil e até mesmo geram gastos para o seu mantimento.</p>
                     <p>Portanto, é necessária a análise do valor dos dados que estão sendo armazenados, uma vez que seu expurgo pode gerar um grande melhoramento no desempenho para com o ambiente.</p>
-                    <img src="https://danielatllas.github.io/Analytics-BI/DarkData1.png">
-                    <img src="https://danielatllas.github.io/Analytics-BI/DarkData2.png">
+                    <img src="https://danielatllas.github.io/Analytics/DarkData1.png">
+                    <img src="https://danielatllas.github.io/Analytics/DarkData2.png">
             </ul>
     </body>
 </html>
