--- a/Menu.html
+++ b/Menu.html
@@ -13,88 +13,93 @@
         <p> Escolha uma das opções abaixo: </p>
         
         <strong>&rharu;</strong> 
-            <a href="https://danielatllas.github.io/Analytics-BI/Introducao.html">
+            <a href="https://danielatllas.github.io/Analytics/Introducao.html">
                 Introdução
             </a>
         <br>
         <strong>&rharu;</strong> 
-            <a href="https://danielatllas.github.io/Analytics-BI/TecnologiasArmazenamento.html">
+            <a href="https://danielatllas.github.io/Analytics/TecnologiasArmazenamento.html">
                 Tecnologias de armazenamento
             </a>
         <br>
         <ul>
             <li><strong>Big Data</strong></li>
                 <strong>&rharu;</strong> 
-                    <a href="https://danielatllas.github.io/Analytics-BI/BigIntroducao.html">
+                    <a href="https://danielatllas.github.io/Analytics/BigIntroducao.html">
                         Big Data - Introdução
                     </a>
                 <br>
             <br>
             <li><strong>Apache Hadoop</strong></li>
                 <strong>&rharu;</strong> 
-                    <a href="https://danielatllas.github.io/Analytics-BI/HadoopIntroducao.html">
+                    <a href="https://danielatllas.github.io/Analytics/HadoopIntroducao.html">
                         Apache Hadoop - Introdução
                     </a>
                 <br>
                 <strong>&rharu;</strong> 
-                    <a href="https://danielatllas.github.io/Analytics-BI/HadoopArquitetura.html">
+                    <a href="https://danielatllas.github.io/Analytics/HadoopArquitetura.html">
                         Apache Hadoop - Arquitetura
+                    </a>
+                <br>
+                <strong>&rharu;</strong> 
+                    <a href="https://danielatllas.github.io/Analytics/HadoopPassos.html">
+                        Apache Hadoop - Primeiros Passos
                     </a>
                 <br>
             <br>
             <li><strong>Apache Spark</strong></li>
              <strong>&rharu;</strong> 
-                <a href="https://danielatllas.github.io/Analytics-BI/SparkIntroducao.html">
+                <a href="https://danielatllas.github.io/Analytics/SparkIntroducao.html">
                     Apache Spark - Introdução
                 </a>
             <br>
             <br>
             <li><strong>Netezza</strong></li>
             <strong>&rharu;</strong> 
-                <a href="https://danielatllas.github.io/Analytics-BI/NetezzaIntroducao.html">
+                <a href="https://danielatllas.github.io/Analytics/NetezzaIntroducao.html">
                     Netezza - Introdução
                 </a>
             <br>
             <strong>&rharu;</strong> 
-                <a href="https://danielatllas.github.io/Analytics-BI/NetezzaADM.html">
+                <a href="https://danielatllas.github.io/Analytics/NetezzaADM.html">
                     Netezza - Administração
                 </a>
             <br>
             <strong>&rharu;</strong> 
-                <a href="https://danielatllas.github.io/Analytics-BI/NetezzaAcessos.html">
+                <a href="https://danielatllas.github.io/Analytics/NetezzaAcessos.html">
                     Netezza - Controle e Segurança de Acessos
                 </a>
             <br>
             <strong>&rharu;</strong> 
-                <a href="https://danielatllas.github.io/Analytics-BI/NetezzaWLM.html">
+                <a href="https://danielatllas.github.io/Analytics/NetezzaWLM.html">
                     Netezza - Workload Management
                 </a>
             <br>
             <strong>&rharu;</strong> 
-                <a href="https://danielatllas.github.io/Analytics-BI/NetezzaGroom.html">
+                <a href="https://danielatllas.github.io/Analytics/NetezzaGroom.html">
                     Netezza - Groom Command
                 </a>
             <br>
             <br>
             <li><strong>Cognos</strong></li>
             <strong>&rharu;</strong> 
-                <a href="https://danielatllas.github.io/Analytics-BI/CognosIntroducao.html">
+                <a href="https://danielatllas.github.io/Analytics/CognosIntroducao.html">
                     Cognos - Introdução
                 </a>
             <br>
                <strong>&rharu;</strong> 
-                <a href="https://danielatllas.github.io/Analytics-BI/CognosInstalacao.html">
+                <a href="https://danielatllas.github.io/Analytics/CognosInstalacao.html">
                     Cognos - Instalação
                 </a> 
             <br>
         </ul>
         <strong>&rharu;</strong> 
-            <a href="https://danielatllas.github.io/Analytics-BI/JVM.html">
+            <a href="https://danielatllas.github.io/Analytics/JVM.html">
                  JVM
             </a> 
             <br>
         <strong>&rharu;</strong> 
-            <a href="https://danielatllas.github.io/Analytics-BI/Servidores.html">
+            <a href="https://danielatllas.github.io/Analytics/Servidores.html">
                  Servidores de aplicação e web
             </a> 
             <br>
